--- a/index.html
+++ b/index.html
@@ -13,35 +13,43 @@
 
 <body>
     <main>
-        <article class="orange">
-            <svg>
-                <use xlink:href="./images/icons.svg#sedan"></use>
-            </svg>
-            <h2>Sedans</h2>
-            <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
-                or on your next road trip.</p>
-            <button></button>
-        </article>
-
-        <article class="cyan">
-            <svg>
-                <use xlink:href="./images/icons.svg#suv"></use>
-            </svg>
-            <h2>SUVs</h2>
-            <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
-                and off-road adventures.</p>
-            <button></button>
-        </article>
-
-        <article class="dark-cyan">
-            <svg>
-                <use xlink:href="./images/icons.svg#luxury"></use>
-            </svg>
-            <h2>Luxury</h2>
-            <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
-                rental and arrive in style.</p>
-            <button></button>
-        </article>
+        <div class="card">
+            <div class="column orange">
+                <article>
+                    <svg>
+                        <use xlink:href="./images/icons.svg#sedan"></use>
+                    </svg>
+                    <h2>Sedans</h2>
+                    <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
+                        or on your next road trip.</p>
+                </article>
+                <button>Learn More</button>
+            </div>
+    
+            <div class="column cyan">
+                <article>
+                    <svg>
+                        <use xlink:href="./images/icons.svg#suv"></use>
+                    </svg>
+                    <h2>SUVs</h2>
+                    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
+                        and off-road adventures.</p>
+                </article>
+                <button>Learn More</button>
+            </div>
+    
+            <div class="column dark-cyan">
+                <article>
+                    <svg>
+                        <use xlink:href="./images/icons.svg#luxury"></use>
+                    </svg>
+                    <h2>Luxury</h2>
+                    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
+                        rental and arrive in style.</p>
+                </article>
+                <button>Learn More</button>
+            </div>
+        </div>
     </main>
 
     <footer>
